--- a/README
+++ b/README
@@ -1,7 +1,7 @@
-***************************** Webgoat.NET **********************************
+***************************** Webgoat.NET *********************************
 * Source Code: https://github.com/jerryhoff/WebGoat.NET
 * Download zip: https://github.com/jerryhoff/WebGoat.NET/zipball/master
-****************************************************************************
+***************************************************************************
  
 This web application is a learning platform that attempts to teach about
 common web security flaws. It contains generic security flaws that apply to
